--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
-      rel="stylesheet"
+      rel=
+      "stylesheet"
     />
+    
   </head>
   <body>
     <div id="root"></div>
